=== Version 0.6.4
* Enhancements
  * Added support for finding the following elements by :css
	Button
	Link
  * Added method to fetch generic element (Thanks Jim Holmes)
  * Changed Elements.element_class_for so parameters can be strings or symbols

=== Version 0.6.3 / 2012-3-1
* Enhancements
  * Added #expected_title method to PageObject
  * Added #expected_element method to PageObject
  * Added #execute_script method to PageObject
  * Updated to use selenium-webdriver 2.20.0
* Fixes
  * Udates to the README - Thanks to p0deje and ivaravko
  WARNING:  This change breaks existing code
  * Changed the generated getter for select_list to return the text instead of the value

=== Version 0.6.2 / 2012-2-12
* Enhancements
  * Added #wait_for_ajax support for the jQuery framework
  * Added #wait_for_ajax support for the Prototype framework
  * Added the ability to add new Javascript Frameworks to PageObject via the #add_framework method
  * Updated to use selenium-webdriver 2.19.0
  * Updated to use watir-webdriver 0.5.3
* Fixes
  * Fixed [] methods on OrderedList and UnorderedList so it only gets direct children
  * Fixed items methods on OrderedList and UnorderedList so it returns count of direct children

=== Version 0.6.1 / 2012-1-18
* Enhancements
  * Added #disabled? method to Element
  * Added #selected_options method to SelectList
  * Added #include? and #selected? to SelectList
  * Added #append to TextField
  * generates a method to determine if an element exists (Thanks Nicholas Munson)
  * better message when calling platform method via method_missing (Thanks Alex Rodionov)
  * Updated to use selenium-webdriver 2.17.0

=== Version 0.6 / 2012-1-10
* Enhancements
  * Added ?_elements methods to ElementLocator so you can find all elements that match an identifier
  * Added ?_elements methods to NestedElements so you can find all elements nested within others
  * Added #navigate_to to PageFactory to navigate to a page through previous pages